test/domains/compilerErrors/notsupportedOpAlign-sparse.chpl

var dfltRectangularSparseSub: sparse subdomain(LocaleSpace);
writeln(dfltRectangularSparseSub align 7);
