test/domains/compilerErrors/notsupportedOpAlign-sparse.good
notsupportedOpAlign-sparse.chpl:3: error: cannot apply 'align' to associative and sparse domains
